--- a/aboutus.html
+++ b/aboutus.html
@@ -100,7 +100,7 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="himanshu.jpg" alt="Jane" style="width:650px;height:500px">
+      <img src="https://github.com/Nitesh9609/shopping.github.io/blob/master/2354642.jpg" alt="Jane" style="width:650px;height:500px">
       <div class="container">
         <h2>Himanshu Saharan</h2>
         <p class="title">CEO & Founder</p>
@@ -113,7 +113,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="https://vignette.wikia.nocookie.net/suits/images/c/c2/Mike_Ross_%285x7%29.png/revision/latest/top-crop/width/720/height/900?cb=20190903001426" alt="Mike" style="width:650px;height:500px">
+      <img src="https://github.com/Nitesh9609/shopping.github.io/blob/master/2354642.jpg" alt="Mike" style="width:650px;height:500px">
       <div class="container">
         <h2>Mike Ross</h2>
         <p class="title">Art Director</p>
