--- a/aboutus.html
+++ b/aboutus.html
@@ -100,7 +100,8 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="https://github.com/Nitesh9609/shopping.github.io/blob/master/2354642.jpg" alt="Jane" style="width:650px;height:500px">
+      <img src="![IMG_20170807_095546](https://user-images.githubusercontent.com/42348621/95008148-d0700380-0634-11eb-9d01-98bb7e1d4c3f.jpg)
+" alt="Jane" style="width:650px;height:500px">
       <div class="container">
         <h2>Himanshu Saharan</h2>
         <p class="title">CEO & Founder</p>
