--- a/aboutus.html
+++ b/aboutus.html
@@ -104,7 +104,7 @@ html {
 " alt="Jane" style="width:650px;height:500px">
       <div class="container">
         <h2>Himanshu Saharan</h2>
-        <p class="title">CEO & Founder</p>
+       
         <p>Himanshu has worked at the intersection of politics, economics, and journalism, where he’s covered local, state, and national politics for two Texas publications and economic news at a network in New Jersey and served as a policy analyst in Texas’ State Capitol. Above all, he enjoys learning new things every day and writing clear, interesting content.</p>
         <p>himanshusaharan486@gmail.com</p>
         <p><button class="button">Contact</button></p>
@@ -116,7 +116,7 @@ html {
     <div class="card">
       <img src="https://github.com/Nitesh9609/shopping.github.io/blob/master/2354642.jpg" alt="Mike" style="width:650px;height:500px">
       <div class="container">
-        <h2>Mike Ross</h2>
+        <h2>Nitesh Sharma</h2>
         <p class="title">Art Director</p>
         <p>"My whole life I have wanted to be a lawyer so that I could help people like Clifford Danner. People who have no one else to fight for them. No one who believes in them.</p>
         <p>mike@example.com</p>
@@ -124,7 +124,18 @@ html {
       </div>
     </div>
   </div>
-  
+  <div class="column">
+    <div class="card">
+      <img src="https://github.com/Nitesh9609/shopping.github.io/blob/master/2354642.jpg" alt="Mike" style="width:650px;height:500px">
+      <div class="container">
+        <h2>Nitin Saharan</h2>
+        <p class="title">Art Director</p>
+        <p>"My whole life I have wanted to be a lawyer so that I could help people like Clifford Danner. People who have no one else to fight for them. No one who believes in them.</p>
+        <p>mike@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
   
       </div>
     </div>
