--- a/aboutus.html
+++ b/aboutus.html
@@ -119,7 +119,7 @@ html {
         <h2>Nitesh Sharma</h2>
         <p class="title">Art Director</p>
         <p>"My whole life I have wanted to be a lawyer so that I could help people like Clifford Danner. People who have no one else to fight for them. No one who believes in them.</p>
-        <p>mike@example.com</p>
+        <p>Sharmanitesh920@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
@@ -129,9 +129,9 @@ html {
       <img src="https://github.com/Nitesh9609/shopping.github.io/blob/master/2354642.jpg" alt="Mike" style="width:650px;height:500px">
       <div class="container">
         <h2>Nitin Saharan</h2>
-        <p class="title">Art Director</p>
+       <p class="title">Art Director</p>
         <p>"My whole life I have wanted to be a lawyer so that I could help people like Clifford Danner. People who have no one else to fight for them. No one who believes in them.</p>
-        <p>mike@example.com</p>
+        <p>Nitinsaharan987@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
