--- a/aboutus.html
+++ b/aboutus.html
@@ -114,7 +114,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="https://github.com/Nitesh9609/shopping.github.io/blob/master/2354642.jpg" alt="Mike" style="width:650px;height:500px">
+      <img src="IMG_20170807_095455.jpg">
       <div class="container">
         <h2>Nitesh Sharma</h2>
         <p class="title">Art Director</p>
