--- a/aboutus.html
+++ b/aboutus.html
@@ -114,7 +114,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="IMG_20170807_095455.jpg">
+      <img src="IMG_20170807_095455.jpg"style="width:650px;height:500px">
       <div class="container">
         <h2>Nitesh Sharma</h2>
         <p class="title">Art Director</p>
