--- a/aboutus.html
+++ b/aboutus.html
@@ -105,7 +105,7 @@ html {
       <div class="container">
         <h2>Himanshu Saharan</h2>
        
-        <p>Himanshu has worked at the intersection of politics, economics, and journalism, where he’s covered local, state, and national politics for two Texas publications and economic news at a network in New Jersey and served as a policy analyst in Texas’ State Capitol. Above all, he enjoys learning new things every day and writing clear, interesting content.</p>
+        <p>hs has worked at the intersection of politics, economics, and journalism, where he’s covered local, state, and national politics for two Texas publications and economic news at a network in New Jersey and served as a policy analyst in Texas’ State Capitol. Above all, he enjoys learning new things every day and writing clear, interesting content.</p>
         <p>himanshusaharan486@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
