--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <option>4</option>
                     
                          </select><br/>   
-                    <button class="buynow-btn"Buy Now</button>
+                    <button class="buynow-btn">Buy Now</button>
                     <button><i class="fa fa-shopping-cart" style="font-size:25px"></i> </button>
                 </div>
                         </div>
