--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                     
                     </select><br/>
                     <button class="buynow-btn">Buy Now</button>
+                    <a href="https://www.w3schools.com/html/html_links.asp">link text</a>
                     <button><i class="fa fa-shopping-cart" style="font-size:25px"></i> </button>
                  </div>   
                         </div>
