--- a/aboutus.html
+++ b/aboutus.html
@@ -100,12 +100,12 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="![IMG_20170807_095546](https://user-images.githubusercontent.com/42348621/95008148-d0700380-0634-11eb-9d01-98bb7e1d4c3f.jpg)
-" alt="Jane" style="width:650px;height:500px">
+     <!-- <img src="![IMG_20170807_095546](https://user-images.githubusercontent.com/42348621/95008148-d0700380-0634-11eb-9d01-98bb7e1d4c3f.jpg)
+" alt="Jane" style="width:650px;height:500px">-->
       <div class="container">
         <h2>Himanshu Saharan</h2>
-       
-        <p>hs has worked at the intersection of politics, economics, and journalism, where he’s covered local, state, and national politics for two Texas publications and economic news at a network in New Jersey and served as a policy analyst in Texas’ State Capitol. Above all, he enjoys learning new things every day and writing clear, interesting content.</p>
+               <p>"My whole life I have wanted to be a lawyer so that I could help people like Clifford Danner. People who have no one else to fight for them. No one who believes in them.</p>
+
         <p>himanshusaharan486@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
@@ -114,7 +114,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="IMG_20170807_095455.jpg"style="width:650px;height:500px">
+     <!-- <img src="IMG_20170807_095455.jpg"style="width:650px;height:500px">-->
       <div class="container">
         <h2>Nitesh Sharma</h2>
         <p class="title">Art Director</p>
@@ -126,7 +126,7 @@ html {
   </div>
   <div class="column">
     <div class="card">
-      <img src="https://github.com/Nitesh9609/shopping.github.io/blob/master/2354642.jpg" alt="Mike" style="width:650px;height:500px">
+     <!-- <img src="https://github.com/Nitesh9609/shopping.github.io/blob/master/2354642.jpg" alt="Mike" style="width:650px;height:500px">-->
       <div class="container">
         <h2>Nitin Saharan</h2>
        <p class="title">Art Director</p>
