--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </a>
         <a href="#personal care">
         <div class="categories">
-           <img src="https://rukminim1.flixcart.com/image/352/352/jj6130w0/learning-toy/u/d/b/vegi-toy-original-imaf6zuakr9cpeuw.jpeg?q=70" class="items-image">
+           <img src="https://www.google.com/search?q=toy&rlz=1C1CHZL_enIN807IN807&sxsrf=ALeKk011ir2BAI0NG0EBCdH6LJ07ktgyOg:1601808027781&source=lnms&tbm=isch&sa=X&ved=2ahUKEwik4vnz35rsAhU74zgGHQ6xBxkQ_AUoAnoECBEQBA&biw=1536&bih=722#imgrc=OyS7umDfOEfZBM" class="items-image">
             <div class="image-title">Toys</div>
            </div>
         
