--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </a>
         <a href="#personal care">
         <div class="categories">
-           <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.amazon.in%2FFunBlast-Unbreakable-Vehicles-Crawling-Children%2Fdp%2FB07PTXSS4G&psig=AOvVaw0_nb7e6Y1mUUNECHcPkgo9&ust=1601894443400000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOiH2vvfmuwCFQAAAAAdAAAAABAU" class="items-image">
+           <img src="im4.jpg?tr=w-1200,h-900q=70" class="items-image">
             <div class="image-title">Toys</div>
            </div>
         
