--- a/register.html
+++ b/register.html
@@ -1,6 +1,6 @@
 <HTML>
 <head>
-    <title> &copy;Shopmart </title>
+    <title> (BB)Big basket </title>
 	<link href="style1.css" type="text/css" rel="stylesheet" />
 	<link rel="shortcut icon" href="images/psportslogo.png">
 	<body>
