--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     
 <head>   
-    <title> (BB)Big basket </title>
+    <title> &copy;Shop Mart </title>
     <meta name="author" content="">
     <meta name="keyboard" content="">
     <meta name="description" content="">
