--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     
 <div class= parallex>
-     <div class="page-title">(BB)BIGG BAZAAR</div>
+     <div class="page-title">Shop Mart</div>
  </div>
     <div class="menu" id="sticky">
     <ul class="menu-ul">
