--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <option>4</option>
                             
                     </select><br/>
-                    <button class="buynow-btn"><a :href="mobile.html"></a>Buy Now</button>
+                    <button class="buynow-btn"><a href="mobile.html">Buy Now</button></a>
                     <button><i class="fa fa-shopping-cart" style="font-size:25px"></i> </button>
                  </div>   
                         </div>
