--- a/index.html
+++ b/index.html
@@ -224,10 +224,9 @@
                     <img src="https://static.toiimg.com/thumb/msid-66688621,width-1200,resizemode-4/66688621.jpg" class="item-image-size">
                    </div>
                 <div class="description">
-                    <br>README 2 SMARTPHONE features A 6.45
-                    -inch HD  <br>
+                    <br>Redmi Note 5 pro  <br>
                     <div class="item-select">
-                      Price :15,000Rs.
+                      Price :14,999Rs.
                     </div> 
                     <label>Qty</label>
                     <select class="item-select">                              
