--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                
             <div class="item">
                     <div class="images">
-                    <img src="https://rukminim1.flixcart.com/image/612/612/k5o7r0w0/air-conditioner-new/j/g/k/sac-103-dzx-0-8-split-fixed-speed-voltas-original-imafzavu7ufmsetd.jpeg?q=70" class="item-image-size">
+                    <img src="https://rukminim1.flixcart.com/image/612/612/k5o7r0w0/air-conditioner-new/j/g/k/sac-103-dzx-0-8-split-fixed-speed-voltas-original-imafzavu7ufmsetd.jpeg?q=70" class="item-image-size" style="width:500px;height:150px; >
                    </div>
                 <div class="description">
                     <br>AC VOLTAS 1.5 TONE<br>
