--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                    </div>
                 <div class="item">
                     <div class="images">
-                    <img src="https://static.toiimg.com/thumb/msid-66688621,width-1200,resizemode-4/66688621.jpg" class="item-image-size">
+                    <img src="mi.jpeg" class="item-image-size">
                    </div>
                 <div class="description">
                     <br>Redmi Note 5 pro  <br>
