--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                    </div>
                 <div class="item">
                     <div class="images">
-                    <img src="mi.jpeg" class="item-image-size">
+                    <img src="mi1.jpeg" class="item-image-size">
                    </div>
                 <div class="description">
                     <br>Redmi Note 5 pro  <br>
